# cc

./: .gitignore  PROBLEMS.md  README.md  Resource.md
CodeChef/: README.md
CodeChef/Practice/: CDQU5.cpp  CHEFCODE.cpp  FROGV.cpp  KPRIME.cpp  SUBINC.cpp
Codeforces/1/: A_TheatreSquare.cpp
Codeforces/1485/: A_AddAndDivide.cpp
Codeforces/1486/: A_ShiftingStacks.cpp  B_EasternExhibition.cpp
Codeforces/1487/: A_Arena.hpp  B_CatCycle.hpp
LeetCode/: README.md
LeetCode/00013_easy_roman-to-integer/: solution.rs
LeetCode/00016_medium_3sum-closest/: solution.hpp
LeetCode/00017_medium_letter-combinations-of-a-phone-number/: solution.hpp
LeetCode/00018_medium_4sum/: solution.hpp
LeetCode/00019_medium_remove-nth-node-from-end-of-list/: solution.hpp
LeetCode/00020_easy_valid-parentheses/: solution.rs
LeetCode/00022_medium_generate-parentheses/: solution.hpp
LeetCode/00024_medium_swap-nodes-in-pairs/: solution.hpp
LeetCode/00026_easy_remove-duplicates-from-sorted-array/: solution.cpp
LeetCode/00028_easy_implement-strstr/: solution.rs
LeetCode/00083_easy_remove-duplicates-from-sorted-list/: solution_best.cpp
ZeroJudge/: f332_berry-s-iron-coil-volume.cpp  f357_factorial.py  f358_factorial-digits.py  f362_peter-s-error-rate.cpp  f368_chia-hao-s-homework.py  f369.cpp
workbench/wb-cpp/: .clang-format  .gitignore  CMakeLists.txt  Makefile
workbench/wb-cpp/app/: CMakeLists.txt  main.cpp
workbench/wb-cpp/lib/: CMakeLists.txt
workbench/wb-cpp/lib/include/workbench/: leetcode.hpp  workbench.hpp
workbench/wb-cpp/lib/src/: workbench_tests.cpp
workbench/wb-cpp/nonapp/: CMakeLists.txt  leetcode.hpp  nonapp_tests.cpp
workbench/wb-cpp/src/app/: CMakeLists.txt  main.cpp
workbench/wb-cpp/src/nonapp/: CMakeLists.txt  leetcode.hpp  nonapp.hpp
workbench/wb-cpp/src/snippet/: CMakeLists.txt
workbench/wb-cpp/src/snippet/include/snippet/: io.hpp  prime.hpp  snippet.hpp
workbench/wb-cpp/src/snippet/src/: prime_tests.cpp  snippet.cpp
workbench/wb-cpp/wbbin/: CMakeLists.txt  main.cpp
workbench/wb-cpp/wblib/: CMakeLists.txt
workbench/wb-cpp/wblib/include/wblib/: wblib.hpp
workbench/wb-cpp/wblib/src/: wblib_tests.cpp
zz-cpp/: .gitignore  Makefile  README.md
zz-cpp/src/appless/: CMakeLists.txt  appless.hpp  appless_tests.cpp
zz-cpp/src/appless/include/appless/: appless.hpp  leetcode.hpp
zz-cpp/src/appless/src/: appless_tests.cpp
zz-go/: Makefile  go.mod
zz-java/: settings.gradle.kts
zz-python/: requirements.in
zz-rust/: .gitignore  Cargo.toml
zz-typescript/: Makefile  lib.ts  lib_test.ts
zz/zz-cpp/: .clang-format  CMakeLists.txt  Makefile  README.md
zz/zz-cpp/src/app/: CMakeLists.txt  main.cpp
zz/zz-cpp/src/appless/include/appless/: appless.hpp  leetcode.hpp
zz/zz-cpp/src/appless/src/: appless_tests.cpp
zz/zz-cpp/src/codebook/: CMakeLists.txt
zz/zz-cpp/src/codebook/include/codebook/: codebook.hpp  io.hpp  modulo.hpp  prime.hpp
zz/zz-cpp/src/codebook/src/: io_tests.cpp  modulo_tests.cpp  prime_tests.cpp
zz/zz-cpp/src/snippet/: CMakeLists.txt
zz/zz-cpp/src/snippet/include/snippet/: modulo.hpp
zz/zz-cpp/src/snippet/src/: io_tests.cpp  modulo_tests.cpp  prime_tests.cpp
(+146 files in other folders)
